; ModuleID = '/home/carl/AnghaBench/systemd/src/veritysetup/extr_veritysetup-generator.c_run.c'
source_filename = "/home/carl/AnghaBench/systemd/src/veritysetup/extr_veritysetup-generator.c_run.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@arg_dest = common dso_local global i8* null, align 8
@parse_proc_cmdline_item = common dso_local global i32 0, align 4
@PROC_CMDLINE_STRIP_RD_PREFIX = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"Failed to parse kernel command line: %m\00", align 1
@arg_enabled = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i8*)* @run to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @run(i8* %0, i8* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  store i8* %0, i8** %5, align 8
  store i8* %1, i8** %6, align 8
  store i8* %2, i8** %7, align 8
  %9 = load i8*, i8** %5, align 8
  store i8* %9, i8** @arg_dest, align 8
  %10 = call i32 @assert_se(i8* %9)
  %11 = load i32, i32* @parse_proc_cmdline_item, align 4
  %12 = load i32, i32* @PROC_CMDLINE_STRIP_RD_PREFIX, align 4
  %13 = call i32 @proc_cmdline_parse(i32 %11, i32* null, i32 %12)
  store i32 %13, i32* %8, align 4
  %14 = load i32, i32* %8, align 4
  %15 = icmp slt i32 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i32, i32* %8, align 4
  %18 = call i32 @log_warning_errno(i32 %17, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  store i32 %18, i32* %4, align 4
  br label %31

19:                                               ; preds = %3
  %20 = load i32, i32* @arg_enabled, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %19
  store i32 0, i32* %4, align 4
  br label %31

23:                                               ; preds = %19
  %24 = call i32 (...) @determine_devices()
  store i32 %24, i32* %8, align 4
  %25 = load i32, i32* %8, align 4
  %26 = icmp slt i32 %25, 0
  br i1 %26, label %27, label %29

27:                                               ; preds = %23
  %28 = load i32, i32* %8, align 4
  store i32 %28, i32* %4, align 4
  br label %31

29:                                               ; preds = %23
  %30 = call i32 (...) @create_device()
  store i32 %30, i32* %4, align 4
  br label %31

31:                                               ; preds = %29, %27, %22, %16
  %32 = load i32, i32* %4, align 4
  ret i32 %32
}

declare dso_local i32 @assert_se(i8*) #1

declare dso_local i32 @proc_cmdline_parse(i32, i32*, i32) #1

declare dso_local i32 @log_warning_errno(i32, i8*) #1

declare dso_local i32 @determine_devices(...) #1

declare dso_local i32 @create_device(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
